Fix wrong dark mode color

--- a/gadgets/variant-ally-dialog/src/styles/tokens.less
+++ b/gadgets/variant-ally-dialog/src/styles/tokens.less
@@ -10,7 +10,9 @@
 @color-visited: var(--color-visited, #6a60b0);
 @color-emphasized: var(--color-emphasized, #101418);
 @color-inverted: var(--color-inverted, #fff);
+@color-inverted-fixed: var(--color-inverted-fixed, #fff);
 @color-disabled: var(--color-disabled, #a2a9b1);
+@color-disabled-emphasized: var(--color-disabled-emphasized, #a2a9b1);
 @color-subtle: var(--color-subtle, #54595d);
 
 /* Background colors */
